[package]
name = "rust_ray_tracer_in_one_weekend"
version = "0.1.0"
authors = ["Jesse Welnick <jesse.welnick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.4"
itertools = "0.10"
try_from_integers = { path = "./src/try_from_integers" }
